# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python_CI.yml
gendiff/: __init__.py  build_diff.py  cli.py  exceptions.py  generate.py  generate_diff.py  parse.py  parser.py  read_files.py  test_gendiff.py
gendiff/formatters/: __init__.py  format_name.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_res_json.txt  file1_nested.yml  file2_nested.yml
