[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey Chapurin <goodwin7@list.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Topic :: Education",
  "Programming Language :: Python :: 3.10",
  "Environment :: Console",
  "License :: Freeware",
]

repository = "https://github.com/SergeyChapurin/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
